@startuml

class Project {
- String projectId
- String title
- String description
- String status
}

class ProjectModel {
- String projectId
- String title
- String description
- String status
}

class Ticket {
- String projectId
- String ticketId
- String title
- String description
- String status
}

class TicketModel {
- String projectId
- String ticketId
- String title
- String description
- String status
}

class ProjectDao {
+getProject(String projectId)
+saveProject(Project project)

}

class TicketDao {
+getTicket(String projectId, String ticketId)
+saveTicket(Ticket ticket)

}

class ModelConverter {
+toProjectModel(Project project)
+toTicketModel(Ticket ticket
}

ModelConverter *-- Project
ModelConverter *-- ProjectModel
ModelConverter *-- Ticket
ModelConverter *-- TicketModel




@enduml